--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     "python.linting.pylintEnabled": true,
     "python.linting.enabled": true,
     "sync.autoUpload": true,
-    "sync.gist": " f34e36fef809029b44037ef3decc6467b901e5d8"
+    "python.autoComplete.addBrackets": true,
+    "python.testing.pyTestEnabled": true
 }
