--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,9 @@
 {
-    "python.pythonPath": "D:\\100daysofweb\\quart-async\\day2\\venv\\Scripts\\python.exe",
+    "python.pythonPath": "D:\\100daysofweb\\sqlalchemy\\venv\\Scripts\\python.exe",
     "python.linting.pylintEnabled": true,
     "python.linting.enabled": true,
     "sync.autoUpload": true,
     "python.autoComplete.addBrackets": true,
-    "python.testing.pyTestEnabled": true
+    "python.testing.pyTestEnabled": true,
+    "python.envFile": ".env" 
 }
